--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,6 +37,7 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Dramatists, French -- 17th century -- Biography -- Early works to 1800'
 - !lcsh 'Molière, 1622-1673'
+- GITenberg
 title: 'La Vie de M. de Molière
 
   Réimpression de l''édition originale (Paris, 1705) et des pièces annexes'
